# ANSV_and_CartesianTrees

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ANSV/: naive_n2_work.cpp  naive_n2_work.h  par_naive_nlgn_work.cpp  par_naive_nlgn_work.h  seq_array_n_work.cpp  seq_array_n_work.h  seq_stack_n_work.cpp  seq_stack_n_work.h
CilkVersions/: COPYnaive_n_squared  COPYnaive_n_squared.cpp
Glue/: Node.h  VI.cpp  VI.h  _aux.cpp  _aux.h  _constants.h
Testing/: TestANSV.cpp  TestANSV.h  TestCT.cpp
